SERVER-7808: mongos does not validate port and accepts values outside of valid range

Signed-off-by: Matt Kangas <matt.kangas@10gen.com>